--- a/package.json
+++ b/package.json
@@ -20,8 +20,12 @@
     "bootstrap": "^4.5.0",
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
+    "cssnano": "^3.10.0",
     "expose-loader": "^0.7.5",
+    "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
+    "html-webpack-plugin": "^2.29.0",
+    "optimize-css-assets-webpack-plugin": "^2.0.0",
     "style-loader": "^0.18.2",
     "uninstall": "0.0.0",
     "url-loader": "^0.5.9",
